--- a/style.css
+++ b/style.css
@@ -1,39 +1,60 @@
 .required-asterisk::after {
     content: '*';
     color: red;
-    margin-left: 4px; 
-  }
+    margin-left: 4px;
+}
 
-  .rating {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-  }
-  
-  .rating > input{ display:none;}
-  
-  .rating > label {
-    position: relative;
-      width: 1em;
-      font-size: 1vw;
-      color: #FFD600;
-      cursor: pointer;
-  }
-  .rating > label::before{ 
-    content: "\2605";
-    position: absolute;
-    opacity: 0;
-  }
-  .rating > label:hover:before,
-  .rating > label:hover ~ label:before {
-    opacity: 1 !important;
-  }
-  
-  .rating > input:checked ~ label:before{
-    opacity:1;
-  }
-  
-  .rating:hover > input:checked ~ label:before{ opacity: 0.4; }
-  
- 
-  
+body {
+    font-family: 'Helvetica', 'Arial', sans-serif;
+}
+rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+}
+
+.rating > input{ display:none;}
+
+.rating > label {
+  position: relative;
+    width: 1em;
+    font-size: 2vw;
+    color: #FFD600;
+    cursor: pointer;
+}
+.rating > label::before{ 
+  content: "\2605";
+  position: absolute;
+  opacity: 0;
+}
+.rating > label:hover:before,
+.rating > label:hover ~ label:before {
+  opacity: 1 !important;
+}
+
+.rating > input:checked ~ label:after{
+  opacity:1;
+}
+
+.rating:hover > input:checked ~ label:before{ opacity: 0.4; }
+
+
+/* Styles for radio buttons inside the table */
+.table tbody tr .form-check-input {
+  appearance: none;
+  border-radius: 50%;
+  border: 1px solid #000;
+  margin: 0; /* Remove default margin */
+  vertical-align: middle; /* Align vertically middle with text */
+
+}
+
+/* Styles for checked radio buttons */
+.table tbody tr .form-check-input:checked {
+  background-color: blue;
+  border-color: #333;
+}
+
+
+
+
